; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_clause.c_transformWhereClause.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_clause.c_transformWhereClause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @transformWhereClause(i32* %0, i32* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %24

14:                                               ; preds = %4
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32* @transformExpr(i32* %15, i32* %16, i32 %17)
  store i32* %18, i32** %10, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = load i32*, i32** %10, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = call i32* @coerce_to_boolean(i32* %19, i32* %20, i8* %21)
  store i32* %22, i32** %10, align 8
  %23 = load i32*, i32** %10, align 8
  store i32* %23, i32** %5, align 8
  br label %24

24:                                               ; preds = %14, %13
  %25 = load i32*, i32** %5, align 8
  ret i32* %25
}

declare dso_local i32* @transformExpr(i32*, i32*, i32) #1

declare dso_local i32* @coerce_to_boolean(i32*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
